update login page

--- a/Frontend/templates/pages/login.html
+++ b/Frontend/templates/pages/login.html
@@ -16,157 +16,160 @@
             <img src="../../images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
             </a>
         </div>
-    </nav>
-
-    <!-- Pills navs -->
-    <ul class="nav nav-pills mb-3" id="ex1" role="tablist">
-        <li class="nav-item" role="presentation">
-        <a class="nav-link show active" id="tab-login" data-bs-toggle="pill" href="#pills-login" role="tab"
-            aria-controls="pills-login" aria-selected="true">Login</a>
-        </li>
-        <li class="nav-item" role="presentation">
-        <a class="nav-link" id="tab-register" data-bs-toggle="pill" href="#pills-register" role="tab"
-            aria-controls="pills-register" aria-selected="false">Register</a>
-        </li>
-    </ul>
-    <!-- Pills navs -->
-
-    
+    </nav>  
     
     <!-- Pills content -->
-    <div class="tab-content">
-        <div class="tab-pane fade show active" id="pills-login" role="tabpanel" aria-labelledby="tab-login">
-            <div class="mb-4">
-
-            </div>
-            <div class="mb-4">
-                <h2 style="color: #2AC0A5;" font-family: Poppins><b>Your trusted handyman service</b></h2>
-                <h2 style="color: #2AC0A5;" font-family: Poppins><b> delivered right at your doorstep.</b></h2>
-                <h3 style="color: #2AC0A5; "><b>Anytime. Anywhere. </b></h3>
-                <br></br>
-                <h4">Welcome back! Please login to your account</h4>
-            </div>
-        <form justify-content="left">
-            <div class="mb-3">
-            <button type="button" class="btn btn-link btn-floating mx-1">
-                <i class="fab fa-facebook-f"></i>
-            </button>
-    
-            <button type="button" class="btn btn-link btn-floating mx-1">
-                <i class="fab fa-google"></i>
-            </button>
-    
-            <button type="button" class="btn btn-link btn-floating mx-1">
-                <i class="fab fa-twitter"></i>
-            </button>
-    
-            <button type="button" class="btn btn-link btn-floating mx-1">
-                <i class="fab fa-github"></i>
-            </button>
-            </div>
-        
-            <!-- Email input -->
-            <div class="form-outline mb-4">
-                <input type="email" id="loginName" class="form-control" placeholder="Email or username" />
-            </div>
-    
-            <!-- Password input -->
-            <div class="form-outline mb-4">
-                <input type="password" id="loginPassword" class="form-control" placeholder="Password" />
-            </div>
-
-            <div>
-                <br></br>
-            </div>
-
-    
-            <!-- 2 column grid layout -->
-            <div class="row mb-4">
-            <div class="col-md-6">
-                <!-- Checkbox -->
-                <div class="form-check mb-3 mb-md-0">
-                <input class="form-check-input" type="checkbox" value="" id="loginCheck" checked />
-                <label class="form-check-label" for="loginCheck"> Remember me </label>
+    <div class="container mt-5">
+        <!-- Pills navs -->
+        <ul class="nav nav-pills mb-3" id="ex1" role="tablist">
+            <li class="nav-item" role="presentation">
+            <a class="nav-link show active" id="tab-login" data-bs-toggle="pill" href="#pills-login" role="tab"
+                aria-controls="pills-login" aria-selected="true">Login</a>
+            </li>
+            <li class="nav-item" role="presentation">
+            <a class="nav-link" id="tab-register" data-bs-toggle="pill" href="#pills-register" role="tab"
+                aria-controls="pills-register" aria-selected="false">Register</a>
+            </li>
+        </ul>
+        <!-- Pills navs -->
+        <div class="row">
+            <div class="col-md-6 ms-0">
+                <div class="tab-content">
+                    <div class="tab-pane fade show active" id="pills-login" role="tabpanel" aria-labelledby="tab-login">
+                        <div class="mb-4">
+            
+                        </div>
+                        <div class="mb-4">
+                            <h2 style="color: #2AC0A5;" font-family: Poppins><b>Your trusted handyman service</b></h2>
+                            <h2 style="color: #2AC0A5;" font-family: Poppins><b> delivered right at your doorstep.</b></h2>
+                            <h3 style="color: #2AC0A5; "><b>Anytime. Anywhere. </b></h3>
+                            <br></br>
+                            <h4">Welcome back! Please login to your account</h4>
+                        </div>
+                    <form justify-content="left">
+                        <div class="mb-3">
+                        <button type="button" class="btn btn-link btn-floating mx-1">
+                            <i class="fab fa-facebook-f"></i>
+                        </button>
+                
+                        <button type="button" class="btn btn-link btn-floating mx-1">
+                            <i class="fab fa-google"></i>
+                        </button>
+                
+                        <button type="button" class="btn btn-link btn-floating mx-1">
+                            <i class="fab fa-twitter"></i>
+                        </button>
+                
+                        <button type="button" class="btn btn-link btn-floating mx-1">
+                            <i class="fab fa-github"></i>
+                        </button>
+                        </div>
+                    
+                        <!-- Email input -->
+                        <div class="form-outline mb-4">
+                            <input type="email" id="loginName" class="form-control" placeholder="Email or username" />
+                        </div>
+                
+                        <!-- Password input -->
+                        <div class="form-outline mb-4">
+                            <input type="password" id="loginPassword" class="form-control" placeholder="Password" />
+                        </div>
+            
+                        <div>
+                            <br></br>
+                        </div>
+            
+                
+                        <!-- 2 column grid layout -->
+                        <div class="row mb-4">
+                        <div class="col-md-6">
+                            <!-- Checkbox -->
+                            <div class="form-check mb-3 mb-md-0">
+                            <input class="form-check-input" type="checkbox" value="" id="loginCheck" checked />
+                            <label class="form-check-label" for="loginCheck"> Remember me </label>
+                            </div>
+                        </div>
+                
+                        <div class="col-md-6">
+                        </div>
+                             <br></br>
+                             <br></br>
+                             <br></br>
+                        </div>
+                
+                        <!-- Submit button -->                     
+                
+                        <!-- Register buttons -->
+                    </form>
+                    </div>
+                    <div class="tab-pane fade" id="pills-register" role="tabpanel" aria-labelledby="tab-register">
+                        <div>
+                            <br></br>
+                        </div>
+                    <form>
+                        <div class="mb-4">
+                            <h2 style="color: #2AC0A5;" font-family: Poppins><b>Your trusted handyman service delivered right at your doorstep.</b></h2>
+                            <h3 style="color: #2AC0A5; "><b>Anytime. Anywhere. </b></h3>
+                            <br></br>
+                            <h4 style="color: #2AC0A5;"><b>Sign up now!</b></h4>
+                        </div>
+            
+                        <div>
+                            <br>
+                        </div>
+            
+                        <!-- Name input -->
+                        <div class="form-outline mb-4">
+                            <input type="password" id="registerName" class="form-control" placeholder="Name" />
+                        </div>
+                
+                        <!-- Username input -->
+                        <div class="form-outline mb-4">
+                            <input type="password" id="registerUsername" class="form-control" placeholder="Username" />
+                        </div>
+                
+                        <!-- Email input -->
+                        <div class="form-outline mb-4">
+                            <input type="password" id="registerEmail" class="form-control" placeholder="Email" />
+                        </div>
+                
+                        <!-- Password input -->
+                        <div class="form-outline mb-4">
+                            <input type="password" id="registerPassword" class="form-control" placeholder="Password" />
+                        </div>
+            
+                        <div>
+                            <br></br>
+                        </div>
+                
+                        <!-- Checkbox -->
+                        <div class="form-check d-flex mb-4">
+                        <input class="form-check-input me-2" type="checkbox" value="" id="registerCheck" checked
+                            aria-describedby="registerCheckHelpText" />
+                        <label class="form-check-label" for="registerCheck">
+                            I have read and agree to the terms
+                        </label>
+                        </div>
+            
+                        <div>
+                            <br></br>
+                        </div>
+            
+            
+                
+                        <!-- Submit button -->
+                        <button type="submit" class="btn btn-primary btn-block mb-3">Sign up</button>
+                    </form>
+            
+                    </div>
                 </div>
             </div>
-    
-            <div class="col-md-6">
+            <div class="col-md-6 me-0">
+                <img src="../../images/login.png" alt="Your Image Description" class="img-fluid" width="1000px" height="500px">
             </div>
-                 <br></br>
-                 <br></br>
-                 <br></br>
-            </div>
-    
-            <!-- Submit button -->
-            <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
-    
-            <!-- Register buttons -->
-        </form>
-        </div>
-        <div class="tab-pane fade" id="pills-register" role="tabpanel" aria-labelledby="tab-register">
-            <div>
-                <br></br>
-            </div>
-        <form>
-            <div class="mb-4">
-                <h2 style="color: #2AC0A5;" font-family: Poppins><b>Your trusted handyman service delivered right at your doorstep.</b></h2>
-                <h3 style="color: #2AC0A5; "><b>Anytime. Anywhere. </b></h3>
-                <br></br>
-                <h4 style="color: #2AC0A5;"><b>Sign up now!</b></h4>
-            </div>
-
-            <div>
-                <br>
-            </div>
-
-            <!-- Name input -->
-            <div class="form-outline mb-4">
-                <input type="password" id="registerName" class="form-control" placeholder="Name" />
-            </div>
-    
-            <!-- Username input -->
-            <div class="form-outline mb-4">
-                <input type="password" id="registerUsername" class="form-control" placeholder="Username" />
-            </div>
-    
-            <!-- Email input -->
-            <div class="form-outline mb-4">
-                <input type="password" id="registerEmail" class="form-control" placeholder="Email" />
-            </div>
-    
-            <!-- Password input -->
-            <div class="form-outline mb-4">
-                <input type="password" id="registerPassword" class="form-control" placeholder="Password" />
-            </div>
-
-            <div>
-                <br></br>
-            </div>
-    
-            <!-- Checkbox -->
-            <div class="form-check d-flex mb-4">
-            <input class="form-check-input me-2" type="checkbox" value="" id="registerCheck" checked
-                aria-describedby="registerCheckHelpText" />
-            <label class="form-check-label" for="registerCheck">
-                I have read and agree to the terms
-            </label>
-            </div>
-
-            <div>
-                <br></br>
-            </div>
-
-
-    
-            <!-- Submit button -->
-            <button type="submit" class="btn btn-primary btn-block mb-3">Sign up</button>
-        </form>
-
         </div>
     </div>
-
-    <!-- Image Column -->
-    <img align="right" src="../../images/login.png"  width = "1000px" height ="1000px">
+    
 
     <footer class="bg-dark text-white">
         <div class="container-fluid" style="padding: 5px ;">
@@ -179,7 +182,4 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
-
-
 </html>
