--- a/Frontend/templates/pages/login.html
+++ b/Frontend/templates/pages/login.html
@@ -67,7 +67,7 @@
                     
                         <!-- Email input -->
                         <div class="form-outline mb-4">
-                            <input type="email" id="loginName" class="form-control" placeholder="Email or username" />
+                            <input type="email" id="loginName" class="form-control" placeholder="Username" />
                         </div>
                 
                         <!-- Password input -->
@@ -97,15 +97,14 @@
                              <br></br>
                         </div>
                 
-                        <!-- Submit button -->                     
+                        <!-- Submit button -->
+                        <button type="submit" class="btn btn-primary btn-block mb-3" id="signInBtn">Sign in</button>                     
                 
                         <!-- Register buttons -->
                     </form>
                     </div>
                     <div class="tab-pane fade" id="pills-register" role="tabpanel" aria-labelledby="tab-register">
-                        <div>
-                            <br></br>
-                        </div>
+               
                     <form>
                         <div class="mb-4">
                             <h2 style="color: #2AC0A5;" font-family: Poppins><b>Your trusted handyman service delivered right at your doorstep.</b></h2>
@@ -114,28 +113,29 @@
                             <h4 style="color: #2AC0A5;"><b>Sign up now!</b></h4>
                         </div>
             
-                        <div>
-                            <br>
-                        </div>
             
                         <!-- Name input -->
                         <div class="form-outline mb-4">
-                            <input type="password" id="registerName" class="form-control" placeholder="Name" />
+                            <input type="text" id="registerName" class="form-control" placeholder="Name" />
                         </div>
                 
                         <!-- Username input -->
                         <div class="form-outline mb-4">
-                            <input type="password" id="registerUsername" class="form-control" placeholder="Username" />
+                            <input type="text" id="registerUsername" class="form-control" placeholder="Username" />
                         </div>
                 
                         <!-- Email input -->
                         <div class="form-outline mb-4">
-                            <input type="password" id="registerEmail" class="form-control" placeholder="Email" />
+                            <input type="text" id="registerEmail" class="form-control" placeholder="Email" />
                         </div>
                 
                         <!-- Password input -->
                         <div class="form-outline mb-4">
                             <input type="password" id="registerPassword" class="form-control" placeholder="Password" />
+                        </div>
+
+                        <div class="form-outline mb-4">
+                            <input type="password" id="repeatPassword" class="form-control" placeholder="Repeat Password" />
                         </div>
             
                         <div>
@@ -155,10 +155,8 @@
                             <br></br>
                         </div>
             
-            
-                
                         <!-- Submit button -->
-                        <button type="submit" class="btn btn-primary btn-block mb-3">Sign up</button>
+                        <button type="submit" class="btn btn-primary btn-block mb-3" id="signUpBtn">Sign up</button>
                     </form>
             
                     </div>
@@ -181,5 +179,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../script/login.js" type="module"></script>
 </body>
 </html>
