--- a/Frontend/templates/pages/confirmation.html
+++ b/Frontend/templates/pages/confirmation.html
@@ -74,10 +74,10 @@
 </head>
 <body>
     <nav class="navbar bg-body-tertiary">
-        <div class="container-fluid fixed-top" style="background-color: #2AC0A5;  padding: 10px;">
-            <a class="navbar-brand navbar-brand-container" style="color: white" href="./index.html">
+        <div class="container-fluid fixed-top" style="background-color: #3DDABE;  padding: 10px;">
+            <a class="navbar-brand" style="color: white" href="./index.html">
                 <b>Servify</b>
-                <img src="../../images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+            <img src="../../images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
             </a>
         </div>
     </nav>  
@@ -100,10 +100,10 @@
                                     </div>
                                 </div>
                                 <div class="col-md-6 text-center">
-                                    <div class="image-container">
+                                    <!-- <div class="image-container">
                                         <img src="../../images/up.png" alt="Image" class="img-fluid">
-                                    </div>
-                                    <a href="./index.html" class="custom-link">View Order</a>
+                                    </div> -->
+                                    <!-- <a href="./index.html" class="custom-link">View Order</a> -->
                                 </div>
                             </div>
                         </div>
@@ -139,10 +139,24 @@
             </div>
         </div>
     </footer>
-  
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../script/confirmation.js"></script>
 
+    <!-- Countdown Modal -->
+    <div class="modal fade" id="countdownModal" tabindex="-1" aria-labelledby="countdownModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="countdownModalLabel">Redirecting...</h5>
+            </div>
+            <div class="modal-body">
+            Redirecting in <span id="countdown">20</span> seconds...
+            </div>
+        </div>
+        </div>
+    </div>
 </body>
 </html>
