--- a/Frontend/templates/pages/index.html
+++ b/Frontend/templates/pages/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="/templates/styles/index.css">
     
 </head>
 <body>
@@ -16,7 +16,7 @@
         <img src="../../images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         </a>
          <form class="ms-auto">
-          <a href="./login.html" class="btn btn-outline-success service-btn"><b>Login</b></a>
+          <a href="login" class="btn btn-outline-success service-btn"><b>Login</b></a>
         </form>
     </div>
     </nav>  
