--- a/Frontend/templates/pages/login.html
+++ b/Frontend/templates/pages/login.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../styles/login.css">
+    <link rel="stylesheet" href="/templates/styles/login.css">
 </head>
 
 <body>
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid fixed-top" style="background-color: #2AC0A5;  padding: 10px;">
-            <a class="navbar-brand" style="color: white" href="./index.html">
+            <a class="navbar-brand" style="color: white" href="/">
                 <b>Servify</b>
             <img src="../../images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
             </a>
@@ -179,6 +179,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../script/login.js" type="module"></script>
+    <script src="/templates/script/login.js" type="module"></script>
 </body>
 </html>
