--- a/Frontend/templates/pages/map.html
+++ b/Frontend/templates/pages/map.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../styles/index.css">
-    <link rel="stylesheet" href="../styles/services.css">
-    <link rel="stylesheet" href="../styles/request.css">
-    <link rel="stylesheet" href="../styles/map.css">
+    <link rel="stylesheet" href="/templates/styles/index.css">
+    <link rel="stylesheet" href="/templates/styles/services.css">
+    <link rel="stylesheet" href="/templates/styles/request.css">
+    <link rel="stylesheet" href="/templates/styles/map.css">
 </head>
 <body>
     <nav class="navbar bg-body-tertiary">
     <div class="container-fluid fixed-top" style="background-color: #3DDABE;  padding: 10px;">
-        <a class="navbar-brand" style="color: white" href="./index.html">
+        <a class="navbar-brand" style="color: white" href="/">
             <b>Servify</b>
         <img src="../../images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         </a>
@@ -30,7 +30,7 @@
             </div>
 
             <div class="text-center">
-                <a href="./confirmation.html" class="btn btn-success confirm-button"><b>Service Provider Arrived</b></a>
+                <a href="/confirmation" class="btn btn-success confirm-button"><b>Service Provider Arrived</b></a>
               </div>
         </section>
         <div class="progress " role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
@@ -51,7 +51,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnSoZr9Bm97EohSU7s3jhtaK2_hdYdX_o&callback=initMap"></script>
-    <script src="../script/map.js"></script>
+    <script src="/templates/script/map.js"></script>
 
     
 </body>
