--- a/Frontend/templates/pages/request.html
+++ b/Frontend/templates/pages/request.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Request</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../styles/request.css">
+  <link rel="stylesheet" href="/templates//styles/request.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar bg-body-tertiary">
     <div class="container-fluid fixed-top" style="background-color: #2AC0A5;  padding: 10px;">
-        <a class="navbar-brand" style="color: white" href="./index.html">
+        <a class="navbar-brand" style="color: white" href="/">
             <b>Servify</b>
         <img src="../../images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         </a>
@@ -107,7 +107,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script src="../script/request.js" type="module"></script>
+    <script src="/templates/script/request.js" type="module"></script>
     
 </body>
 </html>
