--- a/Frontend/templates/pages/services.html
+++ b/Frontend/templates/pages/services.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../styles/index.css">
-    <link rel="stylesheet" href="../styles/services.css">
+    <link rel="stylesheet" href="/templates/styles/index.css">
+    <link rel="stylesheet" href="/templates//styles/services.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar bg-body-tertiary">
     <div class="container-fluid fixed-top" style="background-color: #2AC0A5;  padding: 10px;">
-        <a class="navbar-brand" style="color: white" href="./index.html">
+        <a class="navbar-brand" style="color: white" href="/">
             <b>Servify</b>
         <img src="../../images/header.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
         </a>
@@ -262,7 +262,7 @@
     <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
 
 
-    <script src="../script/services.js" type="module"></script>
+    <script src="/templates/script/services.js" type="module"></script>
 
     
 </body>
