--- a/Frontend/templates/pages/services.html
+++ b/Frontend/templates/pages/services.html
@@ -179,7 +179,7 @@
                 </div>
             </div>
             <div class="text-center">
-                <a href="./request.html" class="btn btn-success next-button"><b>NEXT</b></a>
+                <a href="/request" class="btn btn-success next-button"><b>NEXT</b></a>
             </div>
         </section>
         <div class="progress " role="progressbar" aria-label="Animated striped example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
