--- a/Frontend/templates/pages/services.html
+++ b/Frontend/templates/pages/services.html
@@ -258,8 +258,8 @@
     <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
 
     <!-- If you enabled Analytics, add this Firebase SDK for Analytics -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-analytics.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-analytics.js"></script>
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
 
 
     <script src="/templates/script/services.js" type="module"></script>
