--- a/Frontend/templates/pages/provider.html
+++ b/Frontend/templates/pages/provider.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../styles/provider.css">
+    <link rel="stylesheet" href="/templates/styles/provider.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
@@ -69,6 +69,6 @@
     </div>
 </footer>
 <!-- Firebase App (the core Firebase SDK) -->
-<script src="../script/provider.js" type="module"></script>
+<script src="/templates/script/provider.js" type="module"></script>
 </body>
 </html>
